--- a/app/globals.css
+++ b/app/globals.css
@@ -20,40 +20,24 @@ button {
 :root {
     --bg-full-dark: #1E1E1E;
     --bg-object-dark: #292929;
+    --bg-object-darker: #434343;
 
     --bg-full: #F5F5F5;
     --bg-object: #dfdfdf;
 
-    --primary: #5858e6;
-    --primary-dark: #3232aa;
+    --primary: #f08959;
+    --primary-dark: #c36a41;
 
     scrollbar-width: thin;
     background-color: var(--bg-full);
 }
 
 .scrollable {
+    --track-color: rgba(160, 160, 160, 0.5);
+
     overflow-y: auto;
-    overflow-x: hidden;
+    scrollbar-color: var(--track-color) transparent;
 }
-
-.scrollable::-webkit-scrollbar {
-    width: 7px;
-}
-
-.scrollable::-webkit-scrollbar-thumb {
-    background-color: var(--primary);
-}
-
-.gray-scroll::-webkit-scrollbar-track {
-    margin: 2px;
-}
-.gray-scroll::-webkit-scrollbar {
-    width: 10px;
-}
-
-.gray-scroll::-webkit-scrollbar-thumb {
-    @apply border-2 border-solid border-light dark:border-dark;
-    
-    border-radius: 10px;
-    background-color: #c2c2c2 !important;
+.scrollable::-webkit-scrollbar-thumb:vertical {
+    background-color: var(--track-color);
 }
